# daatypes

./: idfk.py  pyproject.toml  readme.md
src/daatypes/: __init__.py  ball.py  cf.py  comp.py  fixed.py  float.py  int.py  interval.py  monzo.py  octo.py  pareto_front.py  polar.py  qint.py  quat.py  real.py  uint.py  uqint.py  vector.py
